[package]
name = "wasm-test"
version = "0.1.0"
authors = ["quadrifoglio <quadrifoglio.clement@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"

[dependencies.web-sys]
version = "0.3.14"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]
